--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
+
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +25,78 @@
   color: white;
 }
 
+.navbar {
+  background-color: #282c34;
+  border-bottom: 0.5px solid #4df5fd ;
+}
+
+body {
+  background-color: #282c34;
+}
+.nav-item {
+  color: white;
+}
+
+.items-menu {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.icon-items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding:5px 0px;
+}
+.navs-item {
+  color: #4df5fd;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 18px;
+  padding:0px 90px;
+  font-family: 'Quicksand', sans-serif;
+}
+
+.navs-item li {
+  padding:5px 40px;
+  margin: 0px 10px;
+  border-radius: 35px;
+  background-color:#1e0f3f4b;
+}
+
+.icon-items {
+  padding:0px 35px;
+  margin: 0px 10px;
+  border-radius: 35px;
+  
+}
+
+.icon-items button {
+  background-color:#1e0f3f4b;
+  color: #4df5fd;
+  font-family: 'Quicksand', sans-serif;
+  border-radius: 15px;
+  font-size: 18px;
+}
+
+.icon-items button:hover {
+  
+  color: #ece7ca;
+  font-family: 'Quicksand', sans-serif;
+}
+
+
+
+.navs-item li:hover {
+  background-color:#2f1c5c;
+
+}
+
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
