--- a/src/components/ItemCount/itemCount.css
+++ b/src/components/ItemCount/itemCount.css
@@ -6,6 +6,8 @@
     font-family: 'Quicksand', sans-serif;
     font-size:18px;
     margin-bottom: 2px;
+    text-align: center;
+    margin-left: 31%;
 }
 
 .itemCount button {
