--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -24,3 +24,13 @@ display: flex;
 text-align: center;
 justify-content: center;
 }
+
+
+.containerCheck {
+    
+}
+
+.deleteButton {
+    display: flex;
+    justify-content: flex-end;
+}
